--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,14 @@ a{
 	color: #fff;
 	padding-top: 40px;
 	text-align: center;
+	margin-bottom: 20px;
+}
+
+.section-intro-small .title--white{
+	font-size: 40px;
+	color: #fff;
+	padding-top: 40px;
+	text-align: center;
 }
 
 .section-intro-small .title--black{
@@ -570,7 +578,8 @@ a{
 	.section-intro-small .title{
 		font-size: 30px;
 	}
-	.section-intro-small .title--black{
+	.section-intro-small .title--black,
+	.section-intro-small .title--white{
 		font-size: 30px;
 	}
 	.section-intro-small .para{
