--- a/css/style.css
+++ b/css/style.css
@@ -650,7 +650,7 @@ a{
 
 @media screen and (max-width: 540px) {
 	.section-intro-contact .title{
-		font-size: 30px;
+		font-size: 25px;
 		max-width: 200px;
 	}
 	.section-intro-contact .para{
@@ -741,6 +741,16 @@ a{
 	font-size: 19px;
 	font-weight: bold;
 	color: #4f4f4f;
+}
+
+@media screen and (max-width: 540px) {
+	.contact-info .info-item .title span{
+		font-size: 20px;
+	}
+	.contact-info .info-item .info{
+		line-height: 20px;
+		font-size: 14px;
+	}
 }
 
 .col-lg-6 .map-container-1, .map-container-2{
