--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ a{
 	font-size: 20px;
 	color: #fff;
 	padding: 20px 0;
-	padding-top: 60px;
+	/* padding-top: 60px; */
 	text-align: center;
 }
 
